kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  selector:
    matchLabels:
      app: springboot
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: geetha20/springboot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
