kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  selector:
    matchLabels:
      app: react-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: geetha20/react-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
