kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
